[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OneEuroFilter"
version = "0.2.1"
authors = [
  {name = "Géry Casiez", email = "gery.casiez@gmail.com"},
]
description = "1€ filter (One Euro Filter)"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
         "Programming Language :: Python :: 3",
         "License :: OSI Approved :: BSD License"
]

[project.urls]
Repository = "https://github.com/casiez/OneEuroFilter/python"

